Adding the configuration for a good coverage on .json and sonar properties

--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/reportWebVitals.js",
+      "!src/setupTests.js",
+      "!src/index.js"
+    ]
   },
   "eslintConfig": {
     "extends": [
